Fix softwire logo, which for some reason is now distorted?

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -120,7 +120,8 @@ address {
 }
 
 .logo-big {
-  width: 60%;
+  width: 360px;
+  height: 83px;
 }
 
 pre {
